--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "7.17.0",
-    "firebase-admin": "9.0.0",
+    "@reach/dialog": "^0.12.1",
+    "@reach/visually-hidden": "^0.12.0",
+    "date-fns": "^2.16.1",
+    "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
+    "framer-motion": "^3.1.1",
     "next": "latest",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react": "^17.0.1",
+    "react-countdown": "^2.3.1",
+    "react-dom": "^17.0.1",
+    "react-otp-input": "^2.3.0",
+    "sass": "^1.30.0"
   },
   "license": "MIT"
 }
