--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
     "framer-motion": "^3.1.1",
+    "google-map-react": "^2.1.9",
     "next": "latest",
     "react": "^17.0.1",
+    "react-confetti": "^6.0.0",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-otp-input": "^2.3.0",
+    "react-use": "^15.3.4",
     "sass": "^1.30.0"
   },
   "license": "MIT"
